# arcade_jump

./: Cargo.toml  README.md  formulas.md  paper.typ
arcade_jump/: Cargo.toml
arcade_jump/examples/: build_trajectory.rs
arcade_jump/src/: lib.rs  resolver.rs  trajectory.rs
arcade_jump/src/jump_parameter/: float32.rs  float64.rs  mod.rs
arcade_jump/src/resolver/: error.rs  nofailure.rs  util.rs
arcade_jump_macros/: Cargo.toml
arcade_jump_macros/src/: lib.rs  utils.rs
arcade_jump_macros/src/jump/: config.rs  mod.rs  parameter.rs  select.rs  statement.rs
arcade_jump_macros/src/solver/: config.rs  mod.rs  parameter.rs  select.rs  statement.rs
examples/: build_trajectory.rs
src/: gravity.rs  height.rs  horizontal.rs  impulse.rs  jump.rs  lib.rs  solve.rs  time.rs
