[package]
name = "arcade_jump"
description = "Arcade jump trajectory configurator"
version = "0.0.1"
keywords.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = ["std"]

# enable support for the standard library
std = ["num-traits/std", "thiserror/std"]

[dependencies]
num-traits = { version = "0.2", default-features = false }
thiserror = { version = "2.0", default-features = false }
lazy_static = { version = "1.5", features = ["spin_no_std"] }
arcade_jump_macros = "0.0.1"
