[package]
name = "arcade_jump"
description = "Arcade jump trajectory configurator"
version = "0.0.2"
keywords.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = ["std", "data_struct"]

# enable support for the standard library
std = ["num-traits/std", "thiserror/std"]

# enable the libm crate support
libm = ["num-traits/libm"]

# provide a sample trajectory data structure to store a combination of the four parameters
data_struct = []


[dependencies]
num-traits = { version = "0.2", default-features = false }
thiserror = { version = "2.0", default-features = false }
arcade_jump_macros = "0.0.1"
