[package]
name = "arcade_jump_macros"
description = "Arcade jump trajectory configurator"
authors.workspace = true
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
thiserror = "2"
